--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,33 @@
+#login-button {
+  background-color: #536DFE;
+  color: #ffffff; }
+
+#signup-button {
+  background-color: #009688;
+  color: #ffffff; }
+
+#navbar {
+  height: 100px;
+  background-color: #009688; }
+  #navbar h3 {
+    color: #ffffff; }
+  #navbar h5 {
+    color: #B2DFDB; }
+
+/*
+
+will be required later
+
+<a href="#" class="btn btn-fab">
+<img id="testing" src="http://www.wpclipart.com/signs_symbol/icons_oversized/male_user_icon.png">
+</a>
+  #testing{
+      overflow: hidden;
+      background-position: 50%;
+      border-radius: 50%;
+      width: 55px;
+      height: 55px;
+  }
+*/
 
 /*# sourceMappingURL=style.css.map */
