--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,62 @@
+.menu {
+  overflow: auto;
+  padding: 0; }
+  .menu ul {
+    padding: 0;
+    margin: 7px 0; }
+    .menu ul li {
+      list-style: none;
+      padding: 20px 0 20px 50px;
+      font-size: 15px;
+      font-weight: normal;
+      cursor: pointer; }
+  .menu a {
+    color: #333333;
+    text-decoration: none; }
+
+.menu, .menu * {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.menu ul li.active {
+  background-color: #dedede;
+  position: relative; }
+
+.pages {
+  top: 0;
+  right: 0;
+  z-index: 4;
+  padding: 0;
+  overflow: auto; }
+
+.page {
+  -webkit-transform: translateY(1000px);
+  transform: translateY(1000px);
+  transition: -webkit-transform 0 linear;
+  transition: transform 0 linear;
+  display: none;
+  opacity: 0;
+  font-size: 16px; }
+  .page .active {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    transition: all 0.3s ease-out;
+    display: block;
+    opacity: 1; }
+
+.modal-backdrop {
+  z-index: -1; }
+
+#cus-navbar {
+  height: 100px;
+  background-color: #009688; }
+  #cus-navbar h3 {
+    color: #ffffff; }
+  #cus-navbar h5 {
+    color: #B2DFDB; }
+
 #login-button {
   background-color: #536DFE;
   color: #ffffff; }
@@ -29,5 +88,6 @@ will be required later
       height: 55px;
   }
 */
+
 
 /*# sourceMappingURL=style.css.map */
