--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,13 @@
   display: none;
   opacity: 0;
   font-size: 16px; }
-  .page .active {
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-    transition: all 0.3s ease-out;
-    display: block;
-    opacity: 1; }
+
+.active {
+  -webkit-transform: translateY(0px);
+  transform: translateY(0px);
+  transition: all 0.3s ease-out;
+  display: block;
+  opacity: 1; }
 
 .modal-backdrop {
   z-index: -1; }
